--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "spatie/flysystem-dropbox",
+    "name": "nhaai/flysystem-dropbox",
     "description": "Flysystem Adapter for the Dropbox v2 API",
     "keywords": [
-        "spatie",
+        "nhaai",
         "flysystem-dropbox",
         "flysystem",
         "dropbox",
@@ -29,12 +29,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Spatie\\FlysystemDropbox\\": "src"
+            "Nhaai\\FlysystemDropbox\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Spatie\\FlysystemDropbox\\Test\\": "tests"
+            "Nhaai\\FlysystemDropbox\\Test\\": "tests"
         }
     },
     "scripts": {
